# jsonparser

./: LICENSE  README.md  jsonparser.cabal  package.yaml
app/: Main.hs
src/: Json.hs
test/Test/: JSON.hs
