name:                jsonparser
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/matsubara0507/jsonparser#readme
license:             BSD3
license-file:        LICENSE
author:              MATSUBARA Nobutada
copyright:           2017 MATSUBARA Nobutada
category:            Parser
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     JSON
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
  default-language:    Haskell2010

executable jsonparser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , jsonparser
                     , megaparsec
  default-language:    Haskell2010

test-suite jsonparser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jsonparser
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsubara0507/jsonparser
